--- a/libro-de-reclamaciones.html
+++ b/libro-de-reclamaciones.html
@@ -35,7 +35,7 @@
                 <input type="hidden" name="_subject" value="Nuevo Registro en Libro de Reclamaciones">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_template" value="table">
-                <input type="hidden" name="_next" value="https://crediprestaya.com/index.html">
+                <input type="hidden" name="_next" value="https://www.crediprestaya.com/">
 
                 <div class="bloque-form">
                     <h3 class="subtitulo-libro">1. Identificación del Consumidor Reclamante</h3>
