--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
                 <div id="caracteristicas" class="contenido-sub-pestana activo">
                     <ul class="lista-checks">
-                        <li><strong>Montos altos:</strong> Desde S/ 40,000 hasta S/ 800,000 (o su cambio en dólares).</li>
+                        <li><strong>Gran Capital:</strong> Desde S/ 40,000 hasta S/ 800,000 (o su cambio en dólares).</li>
                         <li><strong>Tasa competitiva:</strong> Intereses preferentes desde el 19% anual.</li>
-                        <li><strong>Flexibilidad total:</strong> Incluye periodos de gracia, cuotas comodín y amortización a tu medida.</li>
+                        <li><strong>Flexibilidad total:</strong> Incluye periodos de gracia y amortización a tu medida.</li>
                         <li><strong>Respaldo continuo:</strong> Te acompañamos desde la solicitud hasta la cancelación de tu crédito.</li>
                         <li><strong>Plazo extendido:</strong> Tienes hasta 10 años (120 meses) para pagar cómodamente.</li>
                         <li><strong>Liquidez rápida:</strong> Desembolso efectivo en tu cuenta entre 7 y 10 días.</li>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="bloque-testimonio">
                     <div class="burbuja-texto">
-                        <p>"Estaba ahogada pagando 4 tarjetas de crédito diferentes. Unificaron todas mis deudas en una sola y ahora mi cuota mensual bajó casi un 40%. Por fin puedo dormir tranquila."</p>
+                        <p>"Estaba ahogado pagando 4 tarjetas de crédito diferentes. Unificaron todas mis deudas en una sola y ahora mi cuota mensual bajó casi un 40%. Por fin puedo dormir tranquila."</p>
                     </div>
                     <div class="cliente-info">
                         <img src="./imagenes/10.png" alt="Antonio Maguiña">
